--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,123 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>시작 화면</title>
+    <meta charset="UTF-8">
+    <meta name="_csrf_header" content="${_csrf.headerName}" />
+    <meta name="_csrf" content="${_csrf.token}" />
+    <style>
+        #main {
+            margin: auto;
+        }
+
+        .f_size {
+            font-size: 20px;
+        }
+    </style>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function BTN_LOGIN(){
+            if($("#email").val() == ""){
+                alert("이메일을 입력해주세요.");
+                return;
+            }
+            if($("#pwd").val() == ""){
+                alert("비밀번호를 입력해주세요.");
+                return;
+            }
+            let params = $("#frm").serialize();
+            $.ajax({
+                url :"/login",
+                data : params,
+                datatype : 'text',
+                type : "POST",
+                success : function(result){
+                    if(result == 'notEmail'){
+                        alert('아이디가 존재하지 않습니다.');
+                        return;
+                    } else if(result == 'notPwd'){
+                        alert('비밀번호가 맞지 않습니다.');
+                        return;
+                    } else {
+                        location.href="/login/success";
+                    }
+                }
+            });
+        }
+    </script>
 </head>
+
+
 <body>
-Hello
-<a href="/hello">hello</a>
+<div class="d-flex" id="main" style="width: 900px; height: 1100px;">
+    <div class="d-flex">
+        <img style="width: 500px; height: 950px;"
+             class="align-items-center mt-5" src="" alt="SNS 사진">
+    </div>
+    <div style="width: 400px; height: 1100px;"
+         class="mt-5 pt-5 d-flex justify-content-center ">
+        <div>
+            <div class="d-flex">
+                <img
+                        src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20160812_261%2Fchhy1105_1470933134913SFhpm_JPEG%2Finstagram_icon-700x573.jpg&type=sc960_832"
+                        alt="인스타그램 로고" width="150px">
+                <div class="d-flex align-items-center">
+                    <h2>KIMSTARGRAM</h2>
+                </div>
+
+            </div>
+            <div class="text-secondary  font-weight-bold">
+                <h3 class="d-flex justify-content-center">친구들의 사진과 동영상을 보려면</h3>
+                <h3 class="d-flex justify-content-center">로그인하세요</h3>
+            </div>
+            <hr>
+            <section class="d-flex justify-content-center" style="width: 500px;">
+                <section>
+                    <form action="" method="post" id="frm">
+                        <section class="mt-4">
+                            <span class="font-weight-bold f_size">이메일 주소<br></span> <input
+                                class="f_size" type="text" style="width: 400px; height: 60px;"
+                                placeholder="  이메일 주소" name="email" id="email">
+                        </section>
+                        <section class="mt-4">
+                            <span class="font-weight-bold f_size">PASSWORD<br></span> <input
+                                class="f_size" type="password"
+                                style="width: 400px; height: 60px;" name="pwd" id="pwd"
+                                placeholder="  비밀번호">
+                        </section>
+                        <button class="btn btn-primary mt-5" type="button"
+                                style="width: 400px; height: 60px;" onclick="BTN_LOGIN()">
+                            <span class="f_size">로그인</span>
+                        </button>
+                    </form>
+                    <section class="d-flex mt-4 justify-content-center">
+                        <h5 class="font-weight-bold mr-2 mt-2">계정이 없으신가요?</h5>
+                        <a href="/login/join"><input type="button"
+                                                     class="text-primary font-weight-bold btn" value="가입하기"></a>
+                    </section>
+                </section>
+            </section>
+        </div>
+    </div>
+</div>
 </body>
 </html>
