--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,15 +5,7 @@
     <meta charset="UTF-8">
     <meta name="_csrf_header" content="${_csrf.headerName}" />
     <meta name="_csrf" content="${_csrf.token}" />
-    <style>
-        #main {
-            margin: auto;
-        }
-
-        .f_size {
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -119,5 +111,12 @@
         </div>
     </div>
 </div>
+<script>
+    $('#frm').keypress(function (e){
+        if(e.which == 13){
+            BTN_LOGIN();
+        }
+    })
+</script>
 </body>
 </html>
