--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,3 +1,4 @@
+<!-- 로그인 화면 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,6 +26,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         function BTN_LOGIN(){
@@ -60,22 +64,13 @@
 
 
 <body>
-<div class="d-flex" id="main" style="width: 900px; height: 1100px;">
-    <div class="d-flex">
-        <img style="width: 500px; height: 950px;"
-             class="align-items-center mt-5" src="" alt="SNS 사진">
-    </div>
-    <div style="width: 400px; height: 1100px;"
-         class="mt-5 pt-5 d-flex justify-content-center ">
+<div class="" id="main" style="width: 900px; height: 800px;">
+    <div style="width: 400px; height: 800px;"
+         class="mt-5 pt-5 d-flex justify-content-center wrap container">
         <div>
-            <div class="d-flex">
-                <img
-                        src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20160812_261%2Fchhy1105_1470933134913SFhpm_JPEG%2Finstagram_icon-700x573.jpg&type=sc960_832"
-                        alt="인스타그램 로고" width="150px">
-                <div class="d-flex align-items-center">
-                    <h2>KIMSTARGRAM</h2>
-                </div>
-
+            <div class="d-flex justify-content-center">
+                <img src="img/login.png" alt="게시판 아이콘" width="80px" class="mb-4">
+                <h2 class="d-flex align-items-center ml-4">KIMSTAGRAM</h2>
             </div>
             <div class="text-secondary  font-weight-bold">
                 <h3 class="d-flex justify-content-center">친구들의 사진과 동영상을 보려면</h3>
@@ -86,17 +81,17 @@
                 <section>
                     <form action="" method="post" id="frm">
                         <section class="mt-4">
-                            <span class="font-weight-bold f_size">이메일 주소<br></span> <input
+                            <span class="font-weight-bold f_size">E-mail<br></span> <input
                                 class="f_size" type="text" style="width: 400px; height: 60px;"
                                 placeholder="  이메일 주소" name="email" id="email">
                         </section>
                         <section class="mt-4">
-                            <span class="font-weight-bold f_size">PASSWORD<br></span> <input
+                            <span class="font-weight-bold f_size">Password<br></span> <input
                                 class="f_size" type="password"
                                 style="width: 400px; height: 60px;" name="pwd" id="pwd"
                                 placeholder="  비밀번호">
                         </section>
-                        <button class="btn btn-primary mt-5" type="button"
+                        <button class="btn btn-secondary mt-5" type="button"
                                 style="width: 400px; height: 60px;" onclick="BTN_LOGIN()">
                             <span class="f_size">로그인</span>
                         </button>
@@ -104,7 +99,7 @@
                     <section class="d-flex mt-4 justify-content-center">
                         <h5 class="font-weight-bold mr-2 mt-2">계정이 없으신가요?</h5>
                         <a href="/login/join"><input type="button"
-                                                     class="text-primary font-weight-bold btn" value="가입하기"></a>
+                                                     class="text-secondary font-weight-bold btn" value="가입하기"></a>
                     </section>
                 </section>
             </section>
